syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bolsadeideas.grpcschoolsinterface.grpc";

service SchoolsService {

  rpc findAll(Empty) returns (SchoolsGrpcList) {}
  rpc findById(FindByIdRequestParams) returns (SchoolGrpcObject) {}

}

message Empty { }

message FindByIdRequestParams {
  int64 id = 1;
}

message SchoolGrpcObject {
  int64 id = 1;
  string name = 2;
  string address = 3;
  int32 status = 4;
}

message SchoolsGrpcList {
  repeated SchoolGrpcObject schools = 1;
}

  /*
  public SchoolEntity save(SchoolEntity schoolEntity) {
  return schoolsRepository.save(schoolEntity);
      }

  public void delete(Long schoolId) {
  schoolsRepository.deleteById(schoolId);
      }
   */